test/testdata/classes/methods/static/invalid_unary_op_error.lox
class Foo {
  static bar() {}
}
-Foo.bar; // error: '-' operator cannot be used with type 'function'
